# tensorflow_lite_libs_cpp

./: CMakeLists.txt  CMakeLists_orj.txt  README.md
include/tensorflow/lite/core/: subgraph.h
